[package]
name = "mc_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
bytes = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.9.1", features = [ "v4","fast-rng","macro-diagnostics"]}

[lib]
name = "mc_proxy_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"